Add movie detail activity with review

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
 
     <color name="md_white_1000">#ffffff</color>
     <color name="colorLoading">#858282</color>
+    <color name="colorShimmerDefault">#DDDDDD</color>
 </resources>
