--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,55 +7,166 @@
             name="viewModel"
             type="com.stickearn.moviefavourite.viewmodel.MainViewModel" />
     </data>
-    <LinearLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swpMain"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".view.main.activity.MainActivity"
-        android:layout_marginHorizontal="20dp"
-        android:orientation="vertical"
-        >
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_alternates_bold"
-            android:layout_marginTop="20dp"
-            android:text="@string/popular_movie"
-            />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcyPopularMovie"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"/>
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_alternates_bold"
-            android:layout_marginTop="20dp"
-            android:text="@string/top_rated"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".view.main.activity.MainActivity"
+                android:orientation="vertical"
+                >
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcyTopRatedMovie"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_alternates_bold"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="20dp"
+                    android:text="@string/popular_movie"
+                    />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_alternates_bold"
-            android:layout_marginTop="20dp"
-            android:text="@string/now_playing"
-            />
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmerPopularMovie"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:visibility="visible"
+                    android:layout_marginTop="15dp"
+                    app:shimmer_duration="700">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rcyNowPlaying"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
 
-    </LinearLayout>
+                        <include
+                            layout="@layout/item_popular_movie_loading"/>
+                        <include
+                            layout="@layout/item_popular_movie_loading"/>
+
+                    </LinearLayout>
+
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcyPopularMovie"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="20dp"
+                    android:clipToPadding="false"
+                    android:layout_marginTop="15dp"
+                    android:visibility="gone"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_alternates_bold"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="20dp"
+                    android:text="@string/top_rated"
+                    />
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmerTopRatedMovie"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="15dp"
+                    android:visibility="visible"
+                    app:shimmer_duration="700">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+
+                    </LinearLayout>
+
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcyTopRatedMovie"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="20dp"
+                    android:visibility="gone"
+                    android:clipToPadding="false"
+                    android:layout_marginTop="15dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_alternates_bold"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="20dp"
+                    android:text="@string/now_playing"
+                    />
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmerNowPlayingMovie"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:visibility="visible"
+                    android:layout_marginTop="15dp"
+                    app:shimmer_duration="700">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+                        <include
+                            layout="@layout/item_top_rated_movie_loading"/>
+
+                    </LinearLayout>
+
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcyNowPlaying"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginBottom="20dp"
+                    android:paddingStart="20dp"
+                    android:visibility="gone"
+                    android:clipToPadding="false"
+                    />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
