finish add to favourite db and share link

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="md_white_1000">#ffffff</color>
     <color name="colorLoading">#858282</color>
     <color name="colorShimmerDefault">#DDDDDD</color>
+    <color name="colorRedFavourite">#FF0803</color>
 </resources>
