--- a/app/src/main/res/layout/item_favourite_movie.xml
+++ b/app/src/main/res/layout/item_favourite_movie.xml
@@ -23,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
                 android:scaleType="centerCrop"
+                android:contentDescription="@string/image"
                 tools:src="@color/colorLoading"/>
 
         </androidx.cardview.widget.CardView>
