--- a/app/src/main/res/layout/item_popular_movie_loading.xml
+++ b/app/src/main/res/layout/item_popular_movie_loading.xml
@@ -5,7 +5,7 @@
         android:layout_height="wrap_content"
         android:paddingEnd="20dp"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        >
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -21,6 +21,7 @@
                 android:layout_width="300dp"
                 android:layout_height="170dp"
                 android:scaleType="centerCrop"
+                android:contentDescription="@string/image"
                 android:src="@color/colorShimmerDefault"/>
 
         </androidx.cardview.widget.CardView>
