--- a/app/src/main/res/layout/item_top_rated_movie.xml
+++ b/app/src/main/res/layout/item_top_rated_movie.xml
@@ -21,6 +21,7 @@
                 android:layout_width="170dp"
                 android:layout_height="170dp"
                 android:scaleType="centerCrop"
+                android:contentDescription="@string/image"
                 tools:src="@color/colorLoading"/>
 
         </androidx.cardview.widget.CardView>
